Starting the barebones, learnt about flat binary

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,13 @@
-CC = clang
-LD = ld.lld
+CC     = clang
+LD     = ld.lld
 CFLAGS = -ffreestanding -O0 -g -Wall -Wextra -m64 -target x86_64-elf -nostdlib -fno-exceptions -fno-rtti
 LDFLAGS = -T linker.ld -nostdlib
 
 KERNEL = kernel.bin
-ISO = mykernel.iso
+ISO    = mykernel.iso
 ISO_DIR = iso
 
-all: $(ISO_DIR)/boot/$(KERNEL)
+all: $(ISO)
 
 kernel.o: kernel.c
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -16,23 +16,22 @@ boot_header.o: boot_header.S
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(KERNEL): kernel.o boot_header.o
-	$(LD) $(LDFLAGS) kernel.o boot_header.o -o $(KERNEL)
+	$(LD) $(LDFLAGS) -o $@ $^
 
-$(ISO_DIR)/boot/$(KERNEL): $(KERNEL)
+$(ISO): $(KERNEL)
 	mkdir -p $(ISO_DIR)/boot/grub
 	cp $(KERNEL) $(ISO_DIR)/boot/
 	cp boot/grub.cfg $(ISO_DIR)/boot/grub/
-
-$(ISO): $(ISO_DIR)/boot/$(KERNEL)
-	grub-mkrescue -o $(ISO) $(ISO_DIR)
+	grub-mkrescue -o $@ $(ISO_DIR)
 
 run: $(ISO)
 	qemu-system-x86_64 -cdrom $(ISO) -nographic -serial mon:stdio
+
 
 debug: $(ISO)
 	qemu-system-x86_64 -cdrom $(ISO) -nographic -serial mon:stdio -s -S
 
 clean:
-	rm -f *.o *.bin $(ISO)
+	rm -f *.o *.bin *.iso
 	rm -rf $(ISO_DIR)
 
