--- a/Tutorials/BareBones/.asm-lsp.toml
+++ b/Tutorials/BareBones/.asm-lsp.toml
@@ -1,6 +1,8 @@
 [default_config]
-assembler = "gas"
+# assembler = "gas"
+assembler = "nasm"
 instruction_set = "x86/x86-64"
+syntax = "intel"
 
 [opts]
 compiler = "i686-elf-gcc"
