ok, now to approach from bootloader side

--- a/.asm-lsp.toml
+++ b/.asm-lsp.toml
@@ -16,10 +16,12 @@ instruction_set = "x86/x86-64"
 [project.opts]
 compiler = "nasm"
 compile_flags_txt = [
-  "-f", "elf64",    # generate 64-bit ELF object files
-  "-g",             # debug symbols
-  "-F", "dwarf",    # DWARF format
-  "-Wall"           # enable warnings
+	"-f", "elf64",    # generate 64-bit ELF object files
+	"-g",             # debug symbols
+	"-F", "dwarf",    # DWARF format
+	"-Wall",           # enable warnings
+	"-o", "/dev/null"
+
 ]
 
 
@@ -32,10 +34,11 @@ instruction_set = "x86/x86-64"
 [project.opts]
 compiler = "nasm"
 compile_flags_txt = [
-  "-f", "elf64",    # generate 64-bit ELF object files
-  "-g",             # debug symbols
-  "-F", "dwarf",    # DWARF format
-  "-Wall"           # enable warnings
+	"-f", "elf64",    # generate 64-bit ELF object files
+	"-g",             # debug symbols
+	"-F", "dwarf",    # DWARF format
+	"-Wall",           # enable warnings
+	"-o", "/dev/null"
 ]
 
 # 2️⃣ GCC Intel syntax projects (e.g., kernel, boot headers)
@@ -47,13 +50,14 @@ instruction_set = "x86/x86-64"
 [project.opts]
 compiler = "gcc"
 compile_flags_txt = [
-  "-x", "assembler",    # treat as assembly
-  "-masm=intel",        # Intel syntax
-  "-g",                 # debug symbols
-  "-Wall",
-  "-Wextra",
-  "-O0",                # no optimization
-  "-m64"                # target 64-bit
+	"-x", "assembler",    # treat as assembly
+	"-masm=intel",        # Intel syntax
+	"-g",                 # debug symbols
+	"-Wall",
+	"-Wextra",
+	"-O0",                # no optimization
+	"-m64",                # target 64-bit
+	"-o", "/dev/null"
 ]
 
 
@@ -68,13 +72,14 @@ instruction_set = "x86/x86-64"
 [project.opts]
 compiler = "gcc"
 compile_flags_txt = [
-  "-x", "assembler",    # treat as assembly
-  "-masm=intel",        # Intel syntax
-  "-g",                 # debug symbols
-  "-Wall",
-  "-Wextra",
-  "-O0",                # no optimization
-  "-m64"                # target 64-bit
+	"-x", "assembler",    # treat as assembly
+	"-masm=intel",        # Intel syntax
+	"-g",                 # debug symbols
+	"-Wall",
+	"-Wextra",
+	"-O0",                # no optimization
+	"-m64",                # target 64-bit
+	"-o", "/dev/null"
 ]
 
 
