--- a/.asm-lsp.toml
+++ b/.asm-lsp.toml
@@ -98,6 +98,26 @@ compile_flags_txt = [
 
 
 
+[[project]]
+path = "src/idt"
+assembler = "nasm"
+instruction_set = "x86/x86-64"
+
+[project.opts]
+compiler = "nasm"
+compile_flags_txt = [
+	"-f", "elf32",    # generate 64-bit ELF object files
+	"-g",             # debug symbols
+	"-F", "dwarf",    # DWARF format
+	"-Wall",           # enable warnings
+	"-o", "/tmp/boot.o",
+]
+
+
+
+
+
+
 # 2️⃣ GCC Intel syntax projects (e.g., kernel, boot headers)
 # [[project]]
 # path = "Tutorials/BareBones"
