--- a/src/isodir/grub.cfg
+++ b/src/isodir/grub.cfg
@@ -2,6 +2,8 @@ set default=0
 set timeout=2
 
 menuentry "myos" {
+	set gfxpayload=text
+    terminal_output console
     multiboot2 /boot/myos.bin
 	boot
 }
