--- a/src/isodir/boot/grub/grub.cfg
+++ b/src/isodir/boot/grub/grub.cfg
@@ -2,9 +2,15 @@ set default=0
 set timeout=2
 
 menuentry "myos" {
-	set gfxpayload=text
-    terminal_output console
-    multiboot2 /boot/myos.bin
+	# Request a resolution
+    set gfxmode=1024x768x32        # width x height x bpp
+    set gfxpayload=keep            # pass it to the kernel
+    
+    # Terminal output optional
+    # terminal_output console      # only if you want text
+
+
+	multiboot2 /boot/myos.bin
 	boot
 }
 
