dont need a special entry in grub.cfg it seems

--- a/src/isodir/boot/grub/grub.cfg
+++ b/src/isodir/boot/grub/grub.cfg
@@ -3,8 +3,8 @@ set timeout=2
 
 menuentry "myos" {
 	# Request a resolution
-    set gfxmode=1024x768x32        # width x height x bpp
-    set gfxpayload=keep            # pass it to the kernel
+    # set gfxmode=1024x768x32        # width x height x bpp
+    # set gfxpayload=keep            # pass it to the kernel
     
     # Terminal output optional
     # terminal_output console      # only if you want text
