--- a/src/isodir/grub.cfg
+++ b/src/isodir/grub.cfg
@@ -10,7 +10,7 @@ menuentry "myos" {
     # terminal_output console      # only if you want text
 
 
-	multiboot2 /boot/myos.bin
+	multiboot2 /boot/myos.elf
 	boot
 }
 
