--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 **/build32/**
 **/build64/**
 
+src/ProtectedMode/LongModePrep/kernel64_size.hpp
+src/ProtectedMode/LongModePrep/kernel64_size.inc
+
 **/*.gdb_history
 **/.gdb_history
 
